Link on logo + Fixes error profiles 'onglet'

--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -43,7 +43,7 @@
 
             </ul>
             <div class="logoCenter">
-                <img src="{{ asset('img/favicon-32x32.png') }}"/>
+                <a href="{{ path('homepage') }}"><img src="{{ asset('img/favicon-32x32.png') }}"/></a>
             </div>
 
             <button type="button" class="btn btn-danger tweet" data-toggle="modal" data-target="#exampleModal">Tweeter</button>
