--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,5 @@
 <div class="d-flex fixed-top">
+    <div class="d-flex fixed-top text-white m-5"><h1>Twitter du BDE</h1></div>
     <div class="w-50 d-flex text-left" style="height: 100vh; background: url('{{ asset('img/index.png') }}'); background-size: cover;'">
         <ul class="m-auto text-white text-left m-5" style="font-size: x-large; list-style: none;">
             <li class="mb-4"><i class="fas fa-search"></i> Suivez vos passions.</li>
