--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -52,7 +52,9 @@
 
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Recherche..." aria-label="Search">
-                <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+                <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fas fa-search"></i>
+
+                </button>
             </form>
 
         </div>
